5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1764_1577.log
== TEST (2019-05-21 21:28:13) 
-- CODE:
a=array(eval(input('digite:   ')))
print(max(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:28:47) 
-- CODE:
from numpy import *
a=array(eval(input('digite:   ')))
print(max(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:29:09) 
-- CODE:
from numpy import *
a=array(eval(input('digite:   ')))
print(max(a)*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:30:52) 
-- CODE:
from numpy import *
a=array(eval(input('digite:   ')))
while (size(a)>10):
	print(2*a)
	a=a+1
print(a*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:31:19) 
-- CODE:
from numpy import *
a=array(eval(input('digite:   ')))
while (size(a)<2):
	print(2*a)
	a=a+1
print(a*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:31:43) 
-- CODE:
from numpy import *
a=array(eval(input('digite:   ')))
while (size(a)<2):
	print(2*a)
	a=a+1
print(a*0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:32:10) 
-- CODE:
from numpy import *
a=array(eval(input('digite:   ')))
while (size(a)<2):
	print(2*a)
	
print(a*0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:36:34) 
-- CODE:
from numpy import *
notas=array(0,10,3,4,5,8,9,8,7,9,0,2,2,4.5,6,7,)
print(notas(1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:36:37) 
-- CODE:
from numpy import *
notas=array(0,10,3,4,5,8,9,8,7,9,0,2,2,4.5,6,7,)
print(notas(1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:36:48) 
-- CODE:
from numpy import *
notas=array(0,10,3,4,5,8,9,8,7,9,0,2,2,4.5,6,7,)
print(notas(1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:37:07) 
-- CODE:
from numpy import *
notas=array(0,10,3,4,5,8,9,8,7,9,0,2,2,4.5,6,7,10)
print(notas(1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:37:20) 
-- CODE:
from numpy import *
notas=array(0,10,3,4,5,8,9,8,7,9,0,2,2,4.5,6,7,10)
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:37:44) 
-- CODE:
from numpy import *
notas=array([0,10,3,4,5,8,9,8,7,9,0,2,2,4.5,6,7,10])
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:37:55) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:38:13) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])
print(int(notas))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:38:36) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])
print(round(notas,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:38:48) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:40:06) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])
print(size(notas)
-- ERROR:
File "XXXX", line 4
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:40:18) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])
print(size(notas)
-- ERROR:
File "XXXX", line 4
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:40:25) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])
print(size(notas))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:40:47) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])
print(size(notas))
print(max(notas))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:41:05) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])
print(size(notas))
print(max(notas))
print(min(notas))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:41:23) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])
print(size(notas))
print(max(notas))
print(min(notas))
print(len(notas))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:41:37) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])

print(min(notas))
print(len(notas))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:41:59) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])

print(min(notas))
print(len(notas))
print(size(notas))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:43:02) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])
notas=notas(0) + 1
print(notas)
print(min(notas))
print(len(notas))
print(size(notas))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:43:22) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])
notas=notas[0] + 1
print(notas)
print(min(notas))
print(len(notas))
print(size(notas))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:43:35) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])
notas=notas[0] + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:43:45) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])
notas=notas[0] + 1
print(notas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:44:31) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])
notas[0]= notas[0] + 1
print(notas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:45:01) 
-- CODE:
from numpy import *
notas=array([5,8,9,8,7,9,0,2,2,4.5,6,7,10])
notas[0]= notas[0] + 1
notas[-1]=notas[-1]-0.5
print(notas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:47:09) 
-- CODE:
from numpy import *
v=array([10,20,30])
w=array([10.20,30])
x=v-w
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:47:29) 
-- CODE:
from numpy import *
v=array([10,20,30])
w=array([10,20,30])
x=v-w
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:48:09) 
-- CODE:
from numpy import *
v=array([10,20,30])
w=array([10,20,30])
x=v-w
v[0]=v[0]-5
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:48:29) 
-- CODE:
from numpy import *
v=array([10,20,30])
w=array([10,20,30])
x=v-w
v[0]=v[0]-5
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:48:48) 
-- CODE:
from numpy import *
v=array([10,20,30])
w=array([10,20,30])
x=v-w
v[0]=v[0]-5
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:51:21) 
-- CODE:
from numpy import *
vet = array([3,6,9,12,15])
print(vet[0])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:51:32) 
-- CODE:
from numpy import *
vet = array([3,6,9,12,15])
print(vet[-1])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:51:37) 
-- CODE:
from numpy import *
vet = array([3,6,9,12,15])
print(vet[-2])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:51:44) 
-- CODE:
from numpy import *
vet = array([3,6,9,12,15])
print(vet[-3])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:52:33) 
-- CODE:
from numpy import *
v1 = array([11, 22, 33])
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:53:06) 
-- CODE:
from numpy import *
v1 = array([11, 22, 33])
v2 = array([])
print(v1)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:54:00) 
-- CODE:
from numpy import *
v1 = array([11, 22, 33])
v2 = array([])
v3=array(ones[5,type.int])
print(v1)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:54:07) 
-- CODE:
from numpy import *
v1 = array([11, 22, 33])
v2 = array([])
v3=array(ones[5,typeint])
print(v1)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:15:49) 
-- CODE:
gab = input("Gabarito: ").upper()
resp = input("Respostas: ").upper()
# inicia contadores
i = 0 # caracteres na string
erros = 0 # questoes marcadas erradas
while i < len(gab):
	if gab[i] != resp[i]:
		erros = erros + 1
		i = i + 1
print(len(gab)) # total de questoes
print(erros) # qtde de questoes erradas
# Percentual de erros:
print(100 * erros/len(gab))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:16:40) 
-- CODE:
gab = input("Gabarito: ").upper()
resp = input("Respostas: ").upper()
# inicia contadores
i = 0 # caracteres na string
erros = 0 # questoes marcadas erradas
while i < len(gab):
	if gab[i] != resp[i]:
		erros = erros + 1
		i = i + 1
print(len(gab)) # total de questoes
print(erros) # qtde de questoes erradas
# Percentual de erros:
print(100 * erros/len(gab))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:17:36) 
-- CODE:
gab = input("Gabarito: ").upper()
resp = input("Respostas: ").upper()
# inicia contadores
i = 0 # caracteres na string
erros = 0 # questoes marcadas erradas
while i < len(gab):
	if gab[i] != resp[i]:
		erros = erros + 1
	i = i + 1
print(len(gab)) # total de questoes
print(erros) # qtde de questoes erradas
# Percentual de erros:
print(100 * erros/len(gab))
-- OUTPUT:
3
2
66.66666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:33:19) 
-- CODE:
gab = input("Gabarito: ").upper()
resp = input("Respostas: ").upper()
# inicia contadores
i = 0 # caracteres na string
erros = 0 # questoes marcadas erradas
while i < len(gab):
	if gab[i] != resp[i]:
		erros = erros + 1
	i = i + 1
print(len(gab)) # total de questoes
print(erros) # qtde de questoes erradas
# Percentual de erros:
print(100 * erros/len(gab))
-- OUTPUT:
3
2
66.66666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:40:29) 
-- CODE:
b=float(input("digite: "))
vo=float(input('digite: '))
inteiro=int(input('digite: '))
t=arrange(inteiro)
d=zeros(inteiro)
i=0
while(i<inteiro):
	d[i]=(b*t[i]**2)/2 + vo*t[i]
	i=i+1
print(d)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=arrange(inteiro)
NameError: name 'arrange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:40:44) 
-- CODE:
b=float(input("digite: "))
vo=float(input('digite: '))
inteiro=int(input('digite: '))
t=arange(inteiro)
d=zeros(inteiro)
i=0
while(i<inteiro):
	d[i]=(b*t[i]**2)/2 + vo*t[i]
	i=i+1
print(d)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=arange(inteiro)
NameError: name 'arange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:40:50) 
-- CODE:
b=float(input("digite: "))
vo=float(input('digite: '))
inteiro=int(input('digite: '))
t=arange(inteiro)
d=zeros(inteiro)
i=0
while(i<inteiro):
	d[i]=(b*t[i]**2)/2 + vo*t[i]
	i=i+1
print(d)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=arange(inteiro)
NameError: name 'arange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:40:53) 
-- CODE:
b=float(input("digite: "))
vo=float(input('digite: '))
inteiro=int(input('digite: '))
t=arange(inteiro)
d=zeros(inteiro)
i=0
while(i<inteiro):
	d[i]=(b*t[i]**2)/2 + vo*t[i]
	i=i+1
print(d)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=arange(inteiro)
NameError: name 'arange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:41:29) 
-- CODE:
from numpy import *

b=float(input("digite: "))
vo=float(input('digite: '))
inteiro=int(input('digite: '))
t=arange(inteiro)
d=zeros(inteiro)
i=0
while(i<inteiro):
	d[i]=(b*t[i]**2)/2 + vo*t[i]
	i=i+1
print(d)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:42:14) 
-- CODE:
from numpy import *

b=float(input("digite: ")) #aceleracao
vo=float(input('digite: ')) # velocidade inciaal
inteiro=int(input('digite: ')) 
t=arange(inteiro)
d=zeros(inteiro)
i=0
while(i<inteiro):
	d[i]=(b*t[i]**2)/2 + vo*t[i]
	i=i+1
print(d)
	


-- EXECUTION TIME:
0.525211
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
